# github-repo-recommender

./: .env  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
ai/: .env  __init__.py  ollama_test.py
ai/hugging_face/: __init__.py  hugging_face copy.py  hugging_face.py
ai/ollama_conversation_maintained/: chat.py  config.py  main.py
backend/: analysis.py  app.py
frontend/: index.html  styles.css
llama_python.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: chat.py  main.py
